tests/cases/error/error_invalid_instruction.out
error: Parse error
 --> tests/cases/error/error_invalid_instruction.rapt:1:1
  |
1 | FLORG --foo "bar"
  | ^^^^^ Expected statement
2 | RUN ls -l
3 | RUN ls -l
4 | RUN ls -l
  |
